fixed whitespace again =P

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -109,7 +109,7 @@ header {
       height: 4rem;
       width: 4rem;
       text-align: center;
-      marginfont-family: Tahoma, sans-serif !important;
+      font-family: Tahoma, sans-serif !important;
       background-color: rgba($secondary-color, $alpha: 0.5);
       border: 1px solid $color-five;
       margin: 1rem 4rem;
@@ -279,7 +279,7 @@ header {
 
   .about {
     padding-top: 5rem;
-    height: 110vh;
+    height: 105vh;
 
     .title {
       font-size: 3rem;
