--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -93,7 +93,7 @@
   }
 
   .about {
-    height: 150vh !important;
+    margin-bottom: 6rem;
 
     .qualities {
       padding: 0 !important;
@@ -114,7 +114,6 @@
       .myBio {
         width: 300px !important;
         padding: 0 !important;
-        padding-bottom: 2rem !important;
       }
     }
 
